localization, order, setting

--- a/src/I18n/locales/vi.json
+++ b/src/I18n/locales/vi.json
@@ -1,5 +1,44 @@
 {
-  "category.categoryName": "Tên Phân Loại",
+  "page.name.product": "Sản phẩm",
+  "page.name.productDetail": "Chi tiết sản phẩm",
+  "page.name.category": "Danh mục",
+  "page.name.categoryDetail": "Chi tiết danh mục",
+  "page.name.user": "Người dùng",
+  "page.name.userDetail": "Chi tiết người dùng",
+  "page.name.order": "Đơn đặt hàng",
+  "page.name.orderDetail": "Chi tiết đơn đặt hàng",
+  "page.name.setting": "Thiết lập",
+  "page.name.setting.tagSeo": "Các tag SEO",
+
+
+  "menu.left.category": "Danh mục",
+  "menu.left.product": "Sản phẩm",
+  "menu.left.user": "Người dùng",
+  "menu.left.order": "Đơn đặt hàng",
+  "menu.left.setting": "Thiết lập",
+  "menu.left.setting.common": "Thông tin chung",
+  "menu.left.setting.email": "Email",
+  "menu.left.setting.menuPopup": "Danh mục popup",
+  "menu.left.setting.support": "Hỗ trợ trực tuyến",
+  "menu.left.setting.tagSeo": "Các tag SEO",
+
+  "category.categoryName": "Tên danh mục",
+  "category.slug": "Id",
+  "category.description": "Đặt tả",
+  "category.action": "Chức năng",
+  "category.button.addCategory": "Thêm danh mục",
+
+  "product.productName": "Tên sản phẩm",
+  "product.slug": "Id",
+  "product.description": "Đặt tả",
+  "product.brand": "Thương hiệu",
+  "product.sku": "Mã sản phẩm",
+  "product.action": "Chức năng",
+  "product.images": "Hình sản phẩm",
+  "product.categories": "Danh mục",
+  "product.categories.placeholder": "Chọn Danh mục",
+  "product.button.addImages": "Thêm hình",
+  "product.button.addProduct": "Thêm sản phẩm",
 
   "user.firstName": "Tên",
   "user.lastName": "Họ",
@@ -8,16 +47,35 @@
   "user.role.admin": "Quản trị",
   "user.role.sale": "Bán hàng",
   "user.role.customer": "Khách hàng",
-
+  "user.role.placeholder": "Chọn Chức danh",
   "user.phone": "Số điện thoại",
-  "user.confirmModal.title": "Bạn có chắc xoá người dùng này?",
-  "user.confirmModal.okButton": "Đồng ý",
-  "user.confirmModal.cancelButton": "Huỷ",
-  "user.confirmModal.deleteButton": "Xoá",
-  "user.addUserButton": "Thêm người dùng",
-  "user.validation.require.field": "Xin hãy nhập {name}",
+  "user.images": "Hình đại diện",
+  "user.action": "Chức năng",
+  "user.button.addUser": "Thêm người dùng",
   "user.validation.invalid.email": "Vui lòng nhập đúng email",
+  "user.button.addImages": "Thêm hình",
 
+  "order.email": "Email",
+  "order.total": "Tổng giá",
+  "order.orderItems": " ",
+  "order.orderNumber": "Mã đơn hàng",
+  "order.createdBy": "Người mua",
+  "order.status": "Tình trạng",
+  "order.products": "Sản phẩm",
+  "order.action": "Chức năng",
+  "order.button.addOrder": "Thêm đơn hàng",
+  "order.detail.title": "Chi tiết đơn hàng",
+
+  "common.button.add": "Thêm",
+  "common.button.update": "Cập nhật",
+  "common.button.delete": "Xoá",
+  "common.button.cancel": "Huỷ",
+  "common.button.back": "Trở về",
+  "common.button.ok": "Đồng ý",
+  "common.confirmModal.title": "Bạn có chắc xoá [{name}] này?",
+  "common.validation.require.field": "Xin hãy nhập {name}",
+  "common.event.message.success": "{name} thành công",
+  "common.event.message.error": "{name} thất bại",
 
   "languages.english": "English",
   "languages.german": "Deutsch"
