--- a/src/I18n/locales/vi.json
+++ b/src/I18n/locales/vi.json
@@ -246,7 +246,7 @@
   "dashboard.contruction.subTitle": "Hãy đến với các sản phẩm của Đại Việt",
   "dashboard.contruction.button": "Khám phá ngay",
 
-  "dashboard.faq.title": "Các câu hỏi thường gặp",
+  "dashboard.faq.title": "Câu hỏi thường gặp",
   "dashboard.faq.question1.title": "Làm sao mua hàng khi không hiện giá ?",
   "dashboard.faq.question1.answer": "Bạn có thể thêm sản phẩm vô giỏ hàng rồi bấm thanh toán, sau đó sẽ có nhân viên tư vấn liên hệ bạn ngay khi nhận được thông tin. Nhân viên sẽ tư vấn và báo giá các sản phẩm mà bạn đang quan tâm",
   "dashboard.faq.question2.title": "Tôi sẽ phải thanh toán tiền ngay khi bấm thanh toán ?",
