apply mobile view landing page

--- a/src/I18n/locales/vi.json
+++ b/src/I18n/locales/vi.json
@@ -220,10 +220,10 @@
 
 
   "dashboard.vision.vision": "Tầm nhìn",
-  "dashboard.vision.visionDetail": "Thương hiệu được yêu thích nhất tại Việt Nam",
+  "dashboard.vision.visionDetail": "Thương hiệu được yêu thích nhất Việt Nam",
   "dashboard.vision.coreValue": "Giá trị cốt lõi",
   "dashboard.vision.coreValueDetail": "Phát triển - Hài Hoà - Giá trị cho xã hội",
-  "dashboard.vision.mission": "Xứ mệnh",
+  "dashboard.vision.mission": "Sứ mệnh",
   "dashboard.vision.missionDetail": "Tạo giá trị gia tăng và lợi ích cho xã hội",
 
   "dashboard.information.history.title": "CÔNG TY CP CHIẾU SÁNG & THIẾT BỊ ĐIỆN ĐẠI VIỆT",
