--- a/src/I18n/locales/vi.json
+++ b/src/I18n/locales/vi.json
@@ -397,6 +397,8 @@
   "setting.topMenu.order": "Thứ tự",
   "setting.topMenu.action": "Chức năng",
   "setting.topMenu.button.add": "Thêm top menu",
+  "setting.topMenu.textColor": "Màu chữ",
+  "setting.topMenu.bgColor": "Màu nền",
 
   "setting.support.name": "Tên hỗ trợ",
   "setting.support.title": "Chức danh",
@@ -426,9 +428,14 @@
   "admin.settingPage.home-page.menu-name": "Trang chủ",
   "admin.settingPage.home-page.title-page": "Cấu hình trang chủ",
   "admin.settingPage.home-page.banner.name": "Hình Banner",
-  "admin.settingPage.home-page.introduction.name": "Phần giới thiệu",
-  "admin.settingPage.home-page.introduction.cable": "Phần Cáp",
-  "admin.settingPage.home-page.introduction.led": "Phần Đèn",
+  "admin.settingPage.home-page.introduction.name": "Giới thiệu",
+  "admin.settingPage.home-page.introduction.cable": "Cáp Điện",
+  "admin.settingPage.home-page.introduction.led": "Đèn Led",
+  "admin.settingPage.home-page.introduction.distributor": "Phân Phối",
+  "admin.settingPage.home-page.introduction.footer": "Footer",
+  "admin.settingPage.home-page.introduction.product": "Sản phẩm",
+  "admin.settingPage.home-page.introduction.productId": "Mã Sản phẩm",
+  "admin.settingPage.home-page.introduction.add": "Thêm",
   "admin.settingPage.product-category.title-page": "Cấu hình trang phân loại sản phẩm",
   "admin.settingPage.product-category.cable.banner.name": "Hình Banner (Cáp điện)",
   "admin.settingPage.product-category.ledLight.banner.name": "Hình Banner (Đèn Led)",
