--- a/src/I18n/locales/vi.json
+++ b/src/I18n/locales/vi.json
@@ -100,7 +100,16 @@
   "product.summary": "Tóm lược sản phẩm",
   "product.description": "Chi Tiết sản phẩm",
   "product.specification": "Thông số kỹ thuật",
-  "product.documents": "Tài liệu",
+  "product.color": "Màu",
+  "product.power": "Công suất",
+  "product.specifications": "Quy cách",
+  "product.quantity": "Số lượng",
+  "product.price": "Giá",
+  "product.color_temperature": "Nhiệt độ màu",
+  "product.color_temperature.yellow": "Vàng",
+  "product.color_temperature.normal": "Trung tính",
+  "product.color_temperature.white": "Trắng",
+  "product.status": "Tồn kho",
   "product.brand": "Thương hiệu",
   "product.brand.placeholder": "Chọn thương hiệu",
   "product.sku": "SKU",
@@ -109,15 +118,20 @@
   "product.order": "Thứ tự",
   "product.images": "Hình sản phẩm",
   "product.type": "Phân loại",
+  "product.updatedAt": "Cập nhật",
   "product.type.placeholder": "Chọn Phân loại",
   "product.type.electrical-cable": "Cáp điện",
   "product.type.led-light": "Đèn led",
+  "product.type.all": "Tất cả",
   "product.categories": "Danh mục",
   "product.categories.placeholder": "Chọn Danh mục",
   "product.button.addImages": "Thêm hình",
   "product.button.addProduct": "Thêm sản phẩm",
-  "product.button.addDocument": "Thêm tài liệu",
-  "product.button.cart": "Mua hàng",
+  "product.button.addColor": "Thêm màu",
+  "product.button.addWatt": "Thêm công suất",
+  "product.button.addColorTemperature": "Thêm nhiệt độ màu",
+  "product.button.cart": "Thêm vô giỏ hàng",
+  "product.button.buyNow": "Mua ngay",
   "product.detail": "Chi tiết",
   "product.message.add.success": "Thêm sản phẩm thành công",
   "product.message.update.success": "Cập nhật sản phẩm thành công",
@@ -178,6 +192,7 @@
   "common.button.filter.list": "Danh sách",
   "common.button.filter.grid": "Lưới",
   "common.filter.product": "Sản phẩm",
+  "common.filter.project": "Dự án",
   "common.pagination.rangeData": "{start}-{end} of {total} items",
   "common.price.contactPlease": "Liên hệ",
   "common.select.placeholder": "Hãy chọn",
@@ -311,8 +326,10 @@
   "dashboard.product.title": "Các sản phẩm của chúng tôi",
   "dashboard.product.content": "Sản phẩm chính hãng, uy tín và được các nhà thầu tin dùng trong nhiều năm qua",
   
+  "cart.label": "Giỏ hàng",
   "cart.title": "Giỏ hàng của bạn",
   "cart.cart.title": "Thông tin giỏ hàng",
+  "cart.summary.pricing.title": "Tổng thanh toán ",
   "cart.customer.title": "Thông tin khách hàng",
   "cart.customer.payment": "Phương thức thanh toán",
   "cart.customer.name": "Họ và tên",
